--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -1024,7 +1024,10 @@
     "exclude_packages": ["six"]
   },
   "scoutsuite": {
-    "exclude_packages": ["certifi", "cryptography", "pyparsing", "pytz", "pyyaml", "six", "typing-extensions"]
+    "exclude_packages": [
+      "certifi", "cryptography", "pyparsing", "python-dateutil", "pytz", "pyyaml",
+      "requests", "six", "typing-extensions"
+    ]
   },
   "scrapy": {
     "exclude_packages": [
