--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -1228,6 +1228,9 @@
   "virt-manager": {
     "exclude_packages": ["certifi"]
   },
+  "virtualenv": {
+    "exclude_packages": ["distlib", "filelock", "platformdirs"]
+  },
   "virtualenvwrapper": {
     "exclude_packages": ["six", "virtualenv"]
   },
